Enabling smoke crashes Blender. #56801

Closed
opened 2018-09-14 14:56:15 +02:00 by Alexander Court · 3 comments

System Information
Windows 10, Geforce GTX 1070

Blender Version
Broken: 2.80, e082fc7c77
Worked: (optional)

Short description of error
Enabling smoke on object with volumetric material in rendered view crashes Blender.

Exact steps for others to reproduce the error

  • Open attached the blend file.
  • Switch shading to rendered.

Select the cube and enable "Smoke" in the physics property tab -> Blender crashes.

smoke_crash.blend

smoke_crash_system-info.txt

**System Information** Windows 10, Geforce GTX 1070 **Blender Version** Broken: 2.80, e082fc7c772 Worked: (optional) **Short description of error** Enabling smoke on object with volumetric material in rendered view crashes Blender. **Exact steps for others to reproduce the error** - Open attached the blend file. - Switch shading to rendered. # Select the cube and enable "Smoke" in the physics property tab -> Blender crashes. [smoke_crash.blend](https://archive.blender.org/developer/F4698132/smoke_crash.blend) [smoke_crash_system-info.txt](https://archive.blender.org/developer/F4698130/smoke_crash_system-info.txt)

Added subscriber: @spiegelball

Added subscriber: @spiegelball
Clément Foucault was assigned by Bastien Montagne 2018-09-17 10:37:30 +02:00

This issue was referenced by 5bf32f3337

This issue was referenced by 5bf32f3337b7100547545a66273a5e4b9a6f6972

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56801
No description provided.