Fix T56801: Enabling smoke crashes Blender.